<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.contact.ContactFragment"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerContactText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/backgroundPressed"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/contactText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact_message"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:padding="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/containerContactText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        app:layout_constraintHeight_percent="0.25">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundPressed">

            <ImageView
                android:id="@+id/icGmail"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_gmail"
                app:layout_constraintWidth_percent="0.4"
                android:scaleType="centerInside"
                android:padding="30dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/gmail_contact" />

            <ImageView
                android:id="@+id/icTwitter"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_twitter"
                app:layout_constraintWidth_percent="0.4"
                android:scaleType="centerInside"
                android:padding="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/twitter_contact" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>