<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.maps.MapsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blueLight2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/toolbarSandwich"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_menu"
                android:layout_marginStart="10dp"
                app:layout_constraintWidth_percent="0.1"
                app:layout_constraintHeight_percent="0.55"
                android:contentDescription="@string/toolbar_sandwich" />

            <!--            <EditText-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                android:visibility="visible"/>-->

            <EditText
                android:id="@+id/ETsearchLocation"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintStart_toEndOf="@id/toolbarSandwich"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/round_corner"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/search_location_hint"
                android:gravity="center_vertical|start"
                android:textSize="14sp"
                android:autofillHints="no"
                android:inputType="none"
                android:maxLines="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/row_addresslocation"
        tools:itemCount="5"
        android:elevation="3dp"
        android:layoutAnimation="@anim/layout_animation"
        android:overScrollMode="never" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapsContainer"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />


    <TextView
        android:id="@+id/textPermissionApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="3dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textLocationSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/location_works"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textPermissionApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="2dp"
        android:padding="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>